test/parser/assignment.yl
// RUN: compiler %s -ast-dump 2>&1 | filecheck %s
fn bar(): number { return 1.0; }

fn main(): void {
    // CHECK: [[# @LINE + 1 ]]:11: error: expected ';' at the end of assignment
    a = b = 4.0;

    bar() = 3.0;
    // CHECK: Assignment:
    // CHECK-NEXT:   CallExpr:
    // CHECK-NEXT:     DeclRefExpr: bar
    // CHECK-NEXT:   NumberLiteral: '3.0'

    a = 4.0;
    // CHECK: Assignment:
    // CHECK-NEXT:   DeclRefExpr: a
    // CHECK-NEXT:   NumberLiteral: '4.0'
}
